--- a/FindYourFate/FindYourFate.csproj
+++ b/FindYourFate/FindYourFate.csproj
@@ -69,6 +69,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeForm.Designer.cs">
+      <DependentUpon>ChangeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataBase.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -97,6 +103,12 @@
     <Compile Include="RegistrationForm2.Designer.cs">
       <DependentUpon>RegistrationForm2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Results.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Results.Designer.cs">
+      <DependentUpon>Results.cs</DependentUpon>
+    </Compile>
     <Compile Include="Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +116,10 @@
       <DependentUpon>Test.cs</DependentUpon>
     </Compile>
     <Compile Include="TestForm.cs" />
+    <Compile Include="Users.cs" />
+    <EmbeddedResource Include="ChangeForm.resx">
+      <DependentUpon>ChangeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegistrationForm2.resx">
       <DependentUpon>RegistrationForm2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Results.resx">
+      <DependentUpon>Results.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Test.resx">
       <DependentUpon>Test.cs</DependentUpon>
