--- a/FindYourFate/packages.config
+++ b/FindYourFate/packages.config
@@ -9,6 +9,9 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net472" />
+  <package id="NLog" version="5.1.4" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
